--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A macOS widget for displaying Claude Code usage statistics",
   "main": "dist/main.js",
+  "bin": {
+    "ccusage-widget": "./bin/ccusage-widget.js"
+  },
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
@@ -10,11 +13,19 @@
     "copy-assets": "cp src/*.html dist/ && cp -r src/styles dist/",
     "dist": "electron-builder",
     "lint": "eslint src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "npm run build"
   },
   "keywords": ["electron", "macos", "widget", "claude", "ccusage"],
-  "author": "CCUsage Widget",
+  "author": "JeongJaeSoon",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JeongJaeSoon/ccusage-widget.git"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,7 +36,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "ccusage": "latest"
+    "ccusage": "latest",
+    "electron": "^28.0.0"
   },
   "build": {
     "appId": "com.ccusage.widget",
