feat: transform app into menu bar-only with Claude Code branding
  - Change tray title from "Today: $X.XX" to "Claude Code: $X.XX"
  - Hide dock icon to make pure menu bar app (LSUIElement + app.dock.hide)
  - Hide widget window by default - only opens when user clicks menu bar
  - Add auto-hide on blur for native menu bar behavior
  - Simplify tray context menu to "Open Widget" and "Quit"
  - Position widget window below tray icon when opened
  - Add background cost fetching with 60-second auto-refresh
  - Add `install-global` and `uninstall-global` pnpm scripts
  - Update README for local-only installation workflow
  - Remove npm registry references from README

  The app now functions as a native macOS menu bar utility showing
  real-time Claude Code usage costs alongside the system clock.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint src",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build",
-    "test": "npm run lint && npm run typecheck"
+    "test": "npm run lint && npm run typecheck",
+    "install-global": "pnpm run build && pnpm link --global",
+    "uninstall-global": "pnpm unlink --global"
   },
   "keywords": [
     "electron",
@@ -70,7 +72,7 @@
     "ccusage": "latest"
   },
   "optionalDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.3.3"
   },
   "build": {
     "appId": "com.ccusage.widget",
@@ -80,7 +82,11 @@
     },
     "mac": {
       "category": "public.app-category.productivity",
-      "icon": "assets/icon.png"
+      "icon": "assets/icon.png",
+      "extendInfo": {
+        "LSUIElement": true
+      }
     }
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
